--- a/test/css/project.css
+++ b/test/css/project.css
@@ -461,6 +461,9 @@ label.error {
 .header-line__logo {
   display: block;
   margin-right: 35px;
+  font-size: 35px;
+  font-weight: 600;
+  color: #0861C5;
 }
 
 .header-line__title {
@@ -652,6 +655,14 @@ label.error {
   padding-left: 35px;
 }
 
+.step-slide__grid input.pick-item__digit {
+  width: 170px;
+  height: 35px;
+  margin-left: 15px;
+  margin-bottom: 20px;
+  padding-left: 10px;
+}
+
 .pick-item {
   display: block;
   width: 238px;
@@ -661,10 +672,8 @@ label.error {
 
 .pick-item__img {
   width: 100%;
-  height: 139px;
   overflow: hidden;
   margin-bottom: 5px;
-  text-align: center;
 }
 
 .pick-item__img img {
@@ -1006,6 +1015,9 @@ label.error {
     height: 18px;
     margin: 0 0 -4px 5px;
     background-size: 100% 100%;
+  }
+  .step-slide__grid input.pick-item__digit {
+    margin-left: 0;
   }
 }
 
