--- a/test/scss/_styles-inner.scss
+++ b/test/scss/_styles-inner.scss
@@ -406,6 +406,9 @@ label.error {
 .header-line__logo {
   display: block;
   margin-right: 35px;
+  font-size: 35px;
+  font-weight: 600;
+  color: $main-color-quiz;
 }
 .header-line__title {
   font-size: 18px;
@@ -583,7 +586,13 @@ label.error {
   flex-direction: row;
   padding-left: 35px;
 }
-
+.step-slide__grid input.pick-item__digit {
+  width: 170px;
+  height: 35px;
+  margin-left: 15px;
+  margin-bottom: 20px;
+  padding-left: 10px;
+}
 .pick-item {
   display: block;
   width: 238px;
@@ -592,10 +601,8 @@ label.error {
 }
 .pick-item__img {
   width: 100%;
-  height: 139px;
   overflow: hidden;
   margin-bottom: 5px;
-  text-align: center;
 }
 .pick-item__img img {
   display: inline-block;
@@ -911,6 +918,9 @@ label.error {
     height: 18px;
     margin: 0 0 -4px 5px;
     background-size: 100% 100%;
+  }
+  .step-slide__grid input.pick-item__digit {
+    margin-left: 0;
   }
 }
 @-webkit-keyframes smartlidPreloader {
